--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.0",
     "@tanstack/react-query": "^5.34.1",
     "@tanstack/react-table": "^8.16.0",
     "axios": "^1.6.8",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.0",
+    "react-icons": "^5.2.1",
     "react-pro-sidebar": "^1.1.0",
-    "react-query": "^3.39.3",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.23.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5"
